--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
+    "@parcel/babel-preset-env": "^2.9.3",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^12.1.3",
     "eslint": "^8.8.0",
@@ -28,7 +29,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
-    "parcel": "^2.2.1",
+    "parcel": "^2.9.1",
     "prettier": "^2.5.1",
     "process": "^0.11.10"
   },
